--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </tr>
     <tr>
         <h2><td colspan="3" align="center"><br> 
-          Location: Franciscan A - Hilton San Francisco Union Square, San Francisco, CA, USA<br>
-          Time: <b>1-4:30pm PST, November 9, 2024</b>
+          Location: Melbourne Convention and Exhibition Centre, 1 Convention Centre Place, South Wharf 3006, Melbourne | Naarm, Victoria, Australia<br>
+          Time: <b>July 20 to 24, 2026</b>
         </td>
         </h2>
     </tr>
@@ -34,12 +34,11 @@
 <div class="container">
   <h2>Overview</h2>
     <div class="overview">
-    <p>Language models are being increasingly used in natural language processing (NLP) applications, which require neither the development of a task-specific architecture nor customized training on large datasets. In particular, large language models (LLMs), such as the GPT, PaLM, and Llama-2, have demonstrated significant advances in NLP tasks. On the other hand, concerns have also been raised about the impact of these tools in health care, education, research, and beyond. One notable concern is the potential for LLMs to reinforce disparities in healthcare, as these models are typically trained on data that is historically biased against certain disadvantaged groups. Another concern is the potential for LLMs to be applied for malicious purposes. Although it is widely accepted that LLMs should be used with integrity, transparency, and honesty, how to appropriately do so and, if needed, regulate the development, and use of this technology needs further discussion.</p>
+    <p>Healthcare has become a demanding real-world setting for information retrieval (IR) systems, requiring the ability to search, combine, and reason over a rapidly growing and diverse body of technical literature. IR methods now support tasks such as large-scale document search, evidence synthesis, and decision support, but recent advances in deep learning and large language models still struggle with producing outputs that are fully correct, consistent, and grounded in source documents. These limitations highlight that faithfulness to source evidence, transparent system behavior, and traceability of generated content are fundamental IR challenges, not domain-specific concerns. </p>
 
-    <p>This course provides students with an understanding of LLMs, using ChatGPT, Llama-2, and other models as examples, and their applications in health. Students will acquire knowledge of natural language processing, large language models, chain-of-though, Retrieval-Augmented Generation (RAG), and the range of prompting methods available for processing clinical text. Hands-on experience and a toolkit will provide useful skills for managing text data to solve a variety of problems in the health domain. </p>
+    <p>This workshop focuses on evidence-grounded retrieval, reasoning, and generation in healthcare. It brings together researchers to study retrieval-augmented generation, hierarchical and memory-based retrieval, multimodal retrieval, and human-centered evaluation techniques that explicitly address uncertainty, bias, and provenance.</p>
 
-    <p>We believe that the proposed tutorial is <b>timely and urgently</b> needed for AMIA stakeholders, including informaticists from a broad array of disciplines, clinicians, software developers, and IT professionals, to learn how to develop and use these models to ensure that their potential benefits are realized while any potential risks and negative consequences are minimized. This tutorial will also likely be one of many conversations at AMIA 2024 about this issue as we learn more about LLMs, their capacity, and their potential impact on healthcare.</p>
-    </div>
+    <p> Aligned with core SIGIR themes such as ethical IR, evaluation, digital libraries, and societal impact, the workshop aims to advance reliable and trustworthy IR systems with lessons that generalize beyond healthcare to other high-risk domains.</p>
 </div>
 
 <br>
@@ -60,30 +59,54 @@
   <h2>Organizer</h2>
   <div class = "row">
       <div class="instructor">
-        <a href="https://medicine.yale.edu/profile/hua-xu/">
-          <div class="instructorphoto"><img src="figures/hua.jpg"></div>
-          <div>Hua Xu<br>Yale School of Medicine<br></div>
-        </a>
-      </div>
-
-      <div class="instructor">
-        <a href="https://www.shrs.pitt.edu/people/yanshan-wangyansh">
-          <div class="instructorphoto"><img src="figures/yanshan.jpg"></div>
-          <div>Yanshan Wang<br>University of Pittsburgh<br></div>
-        </a>
-      </div>
-
-      <div class="instructor">
         <a href="https://penglab.weill.cornell.edu/">
           <div class="instructorphoto"><img src="figures/yifan_peng.jpg"></div>
-          <div>Yifan Peng<br>Weill Cornell Medicine<br></div>
+          <div>Yifan Peng<br>Cornell University<br></div>
+        </a>
+      </div>
+      <div class="instructor">
+        <a href="https://findanexpert.unimelb.edu.au/profile/852679-daniel-capurro-nario">
+          <div class="instructorphoto"><img src="figures/Daniel.jpg"></div>
+          <div>Daniel Capurro<br>University of Melbourne<br></div>
+        </a>
+      </div>
+
+      <div class="instructor">
+        <a href="https://sbmi.uth.edu/faculty-and-staff/hongfang-liu.htm">
+          <div class="instructorphoto"><img src="figures/hongfang.jpg"></div>
+          <div>Hongfang Liu<br>UTHealth Houston<br></div>
+        </a>
+      </div>
+  </div>
+  <div class = "row">
+      <div class="instructor">
+        <a href="https://www.duke-nus.edu.sg/directory/detail/liu-nan">
+          <div class="instructorphoto"><img src="figures/nan.jpg"></div>
+          <div>Nan Liu<br>Duke-NUS Medical School<br></div>
+        </a>
+      </div>
+      <div class="instructor">
+        <a href="https://research-repository.uwa.edu.au/en/persons/wei-liu/">
+          <div class="instructorphoto"><img src="figures/wei.jpg"></div>
+          <div>Wei Liu<br>University of Western Australia<br></div>
+        </a>
+      </div>
+      <div class="instructor">
+        <a href="https://profiles.utsouthwestern.edu/profile/224197/justin-rousseau.html">
+          <div class="instructorphoto"><img src="figures/justin.jpg"></div>
+          <div>Justin F. Rousseau<br>UTSouthwestern Medical Center<br></div>
         </a>
       </div>
   </div>
 </div>
 
 <br>
-
+<div class="container">
+  <h2>Acknowledgement of Country</h2>
+    <div class="countryacknowledgement">
+      <p>We acknowledge the Traditional Owners of the lands and waters across Australia, particularly the Wurundjeri Woi Wurrung people of the Kulin Nation, on whose land the Melbourne Convention and Exhibition Centre stands. We pay our respects to Elders past, present and emerging, and recognise the ongoing cultural, spiritual and community connections of Aboriginal and Torres Strait Islander peoples.</p>
+    </div>
+</div>
 <div class="containersmall">
     <p>Please contact <a href="yip4002@med.cornell.edu">Yifan Peng</a> if you have question. The webpage template is by the courtesy of awesome <a href="https://gkioxari.github.io/">Georgia</a>.</p>
 </div>
