--- a/index.html
+++ b/index.html
@@ -46,18 +46,22 @@
 <div class="container">
   <h2>Tentative Schedule</h2>
     <div class="schedule">
-      <p><span class="announce_date">1-2pm</span>. Topic 1: An introduction to LLMs and their development in the medical domain (Hua Xu)</p>
-      <p><span class="announce_date">2-3pm</span>. Topic 2: Integration, application, and evaluation of LLMs in healthcare (Yanshan Wang)</p>
-      <p><span class="announce_date">3-4pm</span>. Topic 3: Multimodal LLMs and their applications (Yifan Peng)</p>
-      <p><span class="announce_date">4-4:30pm</span>. Group discussion</p>
+      <p><span class="announce_date">8:30am</span>. Welcome remarks and introduction</p>
+      <p><span class="announce_date">8:40am</span>. Keynote speech: Transforming Medicine with AI</p>
+      <p><span class="announce_date">9:30am</span>. Oral session I</p>
+      <p><span class="announce_date">10:15am</span>. Coffee break</p>
+      <p><span class="announce_date">10:30am</span>. Panel discussion: Lessons Learned from Evidence-Grounded Information Retrieval in Healthcare</p>
+      <p><span class="announce_date">11:00am</span>. Oral session II</p>
+      <p><span class="announce_date">11:30am</span>. Panel discussion: Trustworthy and Responsible AI in Health Systems</p>
+      <p><span class="announce_date">12:00pm</span>. Closing Remarks</p>
     </div>
 </div>
 
-</br>
+<br>
 
 <div class="container">
   <h2>Organizer</h2>
-  <div class = "row">
+  <div class="organizer-row">
       <div class="instructor">
         <a href="https://penglab.weill.cornell.edu/">
           <div class="instructorphoto"><img src="figures/yifan_peng.jpg"></div>
@@ -78,7 +82,7 @@
         </a>
       </div>
   </div>
-  <div class = "row">
+  <div class="organizer-row">
       <div class="instructor">
         <a href="https://www.duke-nus.edu.sg/directory/detail/liu-nan">
           <div class="instructorphoto"><img src="figures/nan.jpg"></div>
@@ -99,7 +103,25 @@
       </div>
   </div>
 </div>
+<br>
+<div class="container">
+  <h2>Student Organizer</h2>
+  <div class="organizer-row">
+      <div class="instructor">
+        <a href="https://research-repository.uwa.edu.au/en/persons/yihao-ding/">
+          <div class="instructorphoto"><img src="figures/yihao.jpg"></div>
+          <div>Yihao Ding<br>University of Western Australia<br></div>
+        </a>
+      </div>
+      <div class="instructor">
+        <a href="https://cis.unimelb.edu.au/people/graduate-researchers/artificial-intelligence/zihan-xu">
+          <div class="instructorphoto"><img src="figures/zihan.jpg"></div>
+          <div>Zihan Xu<br>University of Melbourne<br></div>
+        </a>
+      </div>
 
+  </div>
+</div>
 <br>
 <div class="container">
   <h2>Acknowledgement of Country</h2>
