--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>SIGIR 2026 Workshop on ER3-Health - Evidence-Grounded Retrieval, Reasoning, and Reporting for Healthcare</title>
-
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-  <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
-  <link href="css/style.css" rel="stylesheet" type="text/css" />
+<link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'/>
+<link href="css/style.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
-
+<!-- ===== Top Navigation Bar ===== -->
+<div class="topnav">
+  <div class="topnav-inner">
+    <span class="brand">ER<sup>3</sup> Health Workshop</span>
+    <a href="index.html">Home</a>
+    <a href="call.html">Call for Papers</a>
+  </div>
+</div>
+<br>
 <div class="container">
   <table border="0" align="center">
     <tr>
@@ -19,17 +25,17 @@
       <span class="title">Evidence-Grounded Retrieval, Reasoning, and Reporting for Healthcare</span></td>
     </tr>
     <tr>
-        <h2><td colspan="3" align="center"><br> 
-          Location: Melbourne Convention and Exhibition Centre, 1 Convention Centre Place, South Wharf 3006, Melbourne | Naarm, Victoria, Australia<br>
+      <td colspan="3" align="center">
+        <h2>
+          Location: Melbourne Convention and Exhibition Centre, 1 Convention Centre Place, South Wharf 3006, Melbourne | Naarm, Victoria, Australia<br />
           Time: <b>July 20 to 24, 2026</b>
-        </td>
         </h2>
+      </td>
     </tr>
   </table>
 <!--   <p><img src="figures/teaser.jpg" width="1000" align="middle" /></p> -->
 </div>
 
-</br>
 
 <div class="container">
   <h2>Overview</h2>
@@ -39,9 +45,9 @@
     <p>This workshop focuses on evidence-grounded retrieval, reasoning, and generation in healthcare. It brings together researchers to study retrieval-augmented generation, hierarchical and memory-based retrieval, multimodal retrieval, and human-centered evaluation techniques that explicitly address uncertainty, bias, and provenance.</p>
 
     <p> Aligned with core SIGIR themes such as ethical IR, evaluation, digital libraries, and societal impact, the workshop aims to advance reliable and trustworthy IR systems with lessons that generalize beyond healthcare to other high-risk domains.</p>
+    </div>
 </div>
 
-<br>
 
 <div class="container">
   <h2>Tentative Schedule</h2>
@@ -57,7 +63,6 @@
     </div>
 </div>
 
-<br>
 
 <div class="container">
   <h2>Organizer</h2>
@@ -103,7 +108,7 @@
       </div>
   </div>
 </div>
-<br>
+
 <div class="container">
   <h2>Student Organizer</h2>
   <div class="organizer-row">
@@ -122,7 +127,7 @@
 
   </div>
 </div>
-<br>
+
 <div class="container">
   <h2>Acknowledgement of Country</h2>
     <div class="countryacknowledgement">
