--- a/call.html
+++ b/call.html
@@ -20,20 +20,13 @@
   <table border="0" align="center">
     <tr>
       <td width="700" align="center" valign="middle"><h3>SIGIR 2026 Workshop on</h3>
-      <span class="title">Evidence-Grounded Retrieval, Reasoning, and Reporting for Healthcare</span></td>
-    </tr>
-    <tr>
-      <td colspan="1" align="center">
-        <h2>
-          Time: <b>July 20 to 24, 2026</b>
-        </h2>
-      </td>
+      <span class="title">EH<sup>3</sup>-Health: Evidence-Grounded Retrieval, Reasoning, and Reporting for Healthcare</span></td>
     </tr>
   </table>
 <!--   <p><img src="figures/teaser.jpg" width="1000" align="middle" /></p> -->
 </div>
 <div class="container">
-  <h2>Call for Papers & Participation: The ER<sup>3</sup> Health Workshop & SIGIR 2026</h2>
+  <h2>Call for Papers & Participation</h2>
 
   <div class="overview">
     <p>Healthcare decisions increasingly rely on finding, combining, and presenting information from a vast and fast-growing body of medical research. Information retrieval (IR) systems are now deeply embedded in this process, supporting everyday tasks such as searching the medical literature, developing clinical guidelines, conducting systematic reviews, and providing information to patients and caregivers. While recent advances in deep learning and large language models have improved healthcare decisions, these models can still generate incorrect, inconsistent, or fabricated information—problems that are especially serious in high-stakes healthcare settings. These failures show that faithfulness to evidence, clear explanations of system behavior, and reliably tracing generated content back to trusted sources remain central challenges in information retrieval, and are therefore of broad interest to the IR community. This workshop complements the main SIGIR 2026 program by focusing on retrieval, reasoning, and generation methods designed for evidence-intensive healthcare scenarios. It aligns closely with SIGIR themes such as the social and societal impact of IR, human-centered search, ethical IR, digital libraries, and evaluation. By using healthcare as a demanding, high-stakes, and high-impact application domain, the workshop will highlight why building evidence-grounded, transparent, and reliable IR systems is both a technical challenge and a societal responsibility, making it a natural and timely fit for the SIGIR community.</p>
@@ -53,11 +46,8 @@
     </ul>
     <p>The workshop will be co-located with <a href="https://sigir2026.org/en-AU">SIGIR 2026</a> in Melbourne, Australia.</p>
   </div>
-
-  <p>
-    ← <a href="index.html">Back to workshop homepage</a>
-  </p>
 </div>
+
 <div class="container">
     <h2>Submission Timeline</h2>
         <div class="schedule">
