--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
 
 <body>
 <!-- ===== Top Navigation Bar ===== -->
-<div class="topnav">
+<!-- <div class="topnav">
   <div class="topnav-inner">
     <span class="brand">ER<sup>3</sup> Health Workshop</span>
     <a href="index.html">Home</a>
     <a href="call.html">Call for Papers</a>
   </div>
 </div>
-<br>
+<br> -->
 <div class="container">
   <table border="0" align="center">
     <tr>
       <td width="700" align="center" valign="middle"><h3>SIGIR 2026 Workshop on</h3>
-      <span class="title">Evidence-Grounded Retrieval, Reasoning, and Reporting for Healthcare</span></td>
+      <span class="title">EH<sup>3</sup>-Health: Evidence-Grounded Retrieval, Reasoning, and Reporting for Healthcare</span></td>
     </tr>
     <tr>
       <td colspan="3" align="center">
-        <h2>
-          Location: Melbourne Convention and Exhibition Centre, 1 Convention Centre Place, South Wharf 3006, Melbourne | Naarm, Victoria, Australia<br />
+        <h3>
+          Location: Melbourne | Naarm, Victoria, Australia<br />
           Time: <b>July 20 to 24, 2026</b>
-        </h2>
+        </h3>
       </td>
     </tr>
   </table>
@@ -51,18 +51,93 @@
 
 <div class="container">
   <h2>Tentative Schedule</h2>
-    <div class="schedule">
-      <p><span class="announce_date">8:30am</span>. Welcome remarks and introduction</p>
-      <p><span class="announce_date">8:40am</span>. Keynote speech: Transforming Medicine with AI</p>
-      <p><span class="announce_date">9:30am</span>. Oral session I</p>
-      <p><span class="announce_date">10:15am</span>. Coffee break</p>
-      <p><span class="announce_date">10:30am</span>. Panel discussion: Lessons Learned from Evidence-Grounded Information Retrieval in Healthcare</p>
-      <p><span class="announce_date">11:00am</span>. Oral session II</p>
-      <p><span class="announce_date">11:30am</span>. Panel discussion: Trustworthy and Responsible AI in Health Systems</p>
-      <p><span class="announce_date">12:00pm</span>. Closing Remarks</p>
-    </div>
+<div class="table_component" role="region" tabindex="0">
+<table>
+    <tbody>
+        <tr>
+            <td>8:30am</td>
+            <td>Welcome remarks and introduction</td>
+        </tr>
+        <tr>
+            <td>8:40am</td>
+            <td>Keynote speech: Transforming Medicine with AI</td>
+        </tr>
+        <tr>
+            <td>9:30am</td>
+            <td>Oral session I</td>
+        </tr>
+        <tr>
+            <td>10:15am</td>
+            <td>Coffee break</td>
+        </tr>
+        <tr>
+            <td>10:30am</td>
+            <td>Panel discussion: Lessons Learned from Evidence-Grounded Information Retrieval in Healthcare</td>
+        </tr>
+        <tr>
+            <td>11:00am</td>
+            <td>Oral session II</td>
+        </tr>
+        <tr>
+            <td>11:30am</td>
+            <td>Panel discussion: Trustworthy and Responsible AI in Health Systems</td>
+        </tr>
+        <tr>
+            <td>12:00pm</td>
+            <td>Closing Remarks</td>
+        </tr>
+    </tbody>
+</table>
+</div>
 </div>
 
+<div class="container">
+  <h2>Call for Papers & Participation</h2>
+  <div class="overview">
+    <p>Healthcare decisions increasingly rely on finding, combining, and presenting information from a vast and fast-growing body of medical research. Information retrieval (IR) systems are now deeply embedded in this process, supporting everyday tasks such as searching the medical literature, developing clinical guidelines, conducting systematic reviews, and providing information to patients and caregivers. While recent advances in deep learning and large language models have improved healthcare decisions, these models can still generate incorrect, inconsistent, or fabricated information—problems that are especially serious in high-stakes healthcare settings. These failures show that faithfulness to evidence, clear explanations of system behavior, and reliably tracing generated content back to trusted sources remain central challenges in information retrieval, and are therefore of broad interest to the IR community. This workshop complements the main SIGIR 2026 program by focusing on retrieval, reasoning, and generation methods designed for evidence-intensive healthcare scenarios. It aligns closely with SIGIR themes such as the social and societal impact of IR, human-centered search, ethical IR, digital libraries, and evaluation. By using healthcare as a demanding, high-stakes, and high-impact application domain, the workshop will highlight why building evidence-grounded, transparent, and reliable IR systems is both a technical challenge and a societal responsibility, making it a natural and timely fit for the SIGIR community.</p>
+
+    <p><b>Topics of interest include, but are not limited to:</b></p>
+    <ul>
+      <li>Evidence-grounded retrieval and retrieval-augmented generation for healthcare</li>
+      <li>Reasoning over retrieved clinical and biomedical evidence</li>
+      <li>Multimodal retrieval and decision support using text, images, and structured health data</li>
+      <li>Evaluation of factuality, faithfulness, and transparency in LLM-based healthcare systems</li>
+      <li>Human-centered and clinician-in-the-loop evaluation for healthcare IR</li>
+      <li>Ethical, fair, and responsible deployment of IR and LLM systems in healthcare</li>
+    </ul>
+  </div>
+
+  <h4>Submission Timeline</h4>
+<div class="table_component" role="region" tabindex="0">
+<table>
+    <tbody>
+        <tr>
+            <td>April 17, 2026</td>
+            <td>Paper submission deadline</td>
+        </tr>
+        <tr>
+            <td>May 21, 2026</td>
+            <td>Notification of acceptance</td>
+        </tr>
+        <tr>
+            <td>June 10, 2026</td>
+            <td>Camera-ready papers due</td>
+        </tr>
+        <tr>
+            <td>July 20-24, 2026</td>
+            <td>Workshop at SIGIR 2026 in Melbourne, Australia</td>
+        </tr>
+    </tbody>
+</table>
+</div>
+
+  <h4>Submission Format</h4>
+    <div class="overview">
+    <p>Authors may submit full papers (8-15 pages, excluding references) in the ACM SIGIR format used for the SIGIR 2026 Full Paper Track. Submissions must describe work that is not previously published, not accepted for publication elsewhere, and not currently under review elsewhere. All submissions must be in English. The workshop follows a single-blind review process. Submissions will be handled electronically through OpenReview.</p>
+    <p>All submissions will undergo a peer review by at least two domain experts from the program committee. The selection of papers will be primarily based on the potential to generate discussion and impact future research directions.</p>
+    <p>Accepted submissions will be presented at the workshop. Selected papers will be invited to publish an extended version of their work in a special issue of the <i><a href="https://www.sciencedirect.com/journal/journal-of-biomedical-informatics">Journal of Biomedical Informatics</a></i>.</p>
+    </div>
+</div>
 
 <div class="container">
   <h2>Organizer</h2>
@@ -130,9 +205,9 @@
 
 <div class="container">
   <h2>Acknowledgement of Country</h2>
-    <div class="countryacknowledgement">
-      <p>We acknowledge the Traditional Owners of the lands and waters across Australia, particularly the Wurundjeri Woi Wurrung people of the Kulin Nation, on whose land the Melbourne Convention and Exhibition Centre stands. We pay our respects to Elders past, present and emerging, and recognise the ongoing cultural, spiritual and community connections of Aboriginal and Torres Strait Islander peoples.</p>
-    </div>
+  <div class="overview">
+    <p>We acknowledge the Traditional Owners of the lands and waters across Australia, particularly the Wurundjeri Woi Wurrung people of the Kulin Nation, on whose land the Melbourne Convention and Exhibition Centre stands. We pay our respects to Elders past, present and emerging, and recognise the ongoing cultural, spiritual and community connections of Aboriginal and Torres Strait Islander peoples.</p>
+  </div>
 </div>
 <div class="containersmall">
     <p>Please contact <a href="yip4002@med.cornell.edu">Yifan Peng</a> if you have question. The webpage template is by the courtesy of awesome <a href="https://gkioxari.github.io/">Georgia</a>.</p>
