--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <tr>
       <td colspan="3" align="center">
         <h3>
-          Location: Melbourne | Naarm, Victoria, Australia<br />
+          Location: Melbourne, Naarm, Victoria, Australia<br />
           Time: <b>July 20 to 24, 2026</b>
         </h3>
       </td>
