--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <p>This workshop focuses on evidence-grounded retrieval, reasoning, and generation in healthcare. It brings together researchers to study retrieval-augmented generation, hierarchical and memory-based retrieval, multimodal retrieval, and human-centered evaluation techniques that explicitly address uncertainty, bias, and provenance.</p>
 
-    <p> Aligned with core SIGIR themes such as ethical IR, evaluation, digital libraries, and societal impact, the workshop aims to advance reliable and trustworthy IR systems with lessons that generalize beyond healthcare to other high-risk domains.</p>
+    <p> Aligned with core <a href="https://sigir2026.org/en-AU">SIGIR</a> themes such as ethical IR, evaluation, digital libraries, and societal impact, the workshop aims to advance reliable and trustworthy IR systems with lessons that generalize beyond healthcare to other high-risk domains.</p>
     </div>
 </div>
 
